--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "saitama",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-css": "node-sass --include-path scss scss/main.scss css/styles.css",
-    "watch-css":"nodemon -e scss -x \"npm run build-css\""
+    "build-css": "node-sass --include-path scss scss/main.scss css/style.css",
+    "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "repository": {
     "type": "git",
@@ -19,7 +18,10 @@
   },
   "homepage": "https://github.com/santiagot0/coder-saitama#readme",
   "dependencies": {
-    "node-sass": "^7.0.1",
     "nodemon": "^2.0.16"
+  },
+  "description": "",
+  "devDependencies": {
+    "node-sass": "^7.0.1"
   }
 }
